# wasix-rust-examples_training2024

./: README.md
001_hyper_tutorial/: Cargo.toml  README.md
001_hyper_tutorial/crates/a01_hyper_hello/: Cargo.toml
001_hyper_tutorial/crates/a01_hyper_hello/src/: main.rs
001_hyper_tutorial/crates/support_tokio_io_time/: Cargo.toml  README.md
001_hyper_tutorial/crates/support_tokio_io_time/src/: lib.rs
001_hyper_tutorial/crates/support_tokio_io_time/src/support/: mod.rs  tokiort.rs
002_wit_binding_rust/: README.md
002_wit_binding_rust/plugin_api/: Cargo.toml
002_wit_binding_rust/plugin_api/src/: lib.rs
002_wit_binding_rust/plugin_api/wit/: world.wit
002_wit_binding_rust/plugin_host/: Cargo.toml
002_wit_binding_rust/plugin_host/src/: main.rs
002_wit_binding_rust/test_pre2/: Cargo.toml
002_wit_binding_rust/test_pre2/src/: bindings.rs
002_wit_binding_rust/wasm_tools_test/: Cargo.toml  README.md
003_Leptos_SurrealDB/001_Leptos_SurrealDB_Actix/a01-leptos-tutorial/: README.md
003_Leptos_SurrealDB/001_Leptos_SurrealDB_Actix/a01-leptos-tutorial/src/: app.rs  main.rs
003_Leptos_SurrealDB/001_Leptos_SurrealDB_Actix/z01_leptos_axum_hackersnews/: Cargo.toml
003_Leptos_SurrealDB/001_Leptos_SurrealDB_Actix/z01_leptos_axum_hackersnews/src/: lib.rs
003_Leptos_SurrealDB/001_Leptos_SurrealDB_Actix/z01_leptos_axum_hackersnews/src/routes/: story.rs  users.rs
003_Leptos_SurrealDB/002_Leptos_Tutorial/: README.md
003_Leptos_SurrealDB/002_Leptos_Tutorial/001_Part1_Building_User_Interfaces/3_4_Iteration/a01_static_views_vec/src/: main.rs
003_Leptos_SurrealDB/002_Leptos_Tutorial/001_Part1_Building_User_Interfaces/3_4_Iteration/a03_render_dynamic_items/src/: main.rs
003_Leptos_SurrealDB/002_Leptos_Tutorial/001_Part1_Building_User_Interfaces/3_5_Iteraing_over_More_Complex_data/: README.md
003_Leptos_SurrealDB/002_Leptos_Tutorial/001_Part1_Building_User_Interfaces/3_5_Iteraing_over_More_Complex_data/a01_iterating_over/src/: main.rs
003_Letos_SurrealDB/: README.md
003_Letos_SurrealDB/001_Letos_SurrealDB_Actix/: README.md
003_Letos_SurrealDB/001_Letos_SurrealDB_Actix/a01-leptos-tutorial/: .gitignore  Cargo.toml
003_Letos_SurrealDB/001_Letos_SurrealDB_Actix/z01_leptos_axum_hackersnews/: README.md
004_axum_tutorial/: README.md
a01_hyper_tutorial/: Cargo.toml  README.md
a01_hyper_tutorial/crates/a01_hyper_hello/: Cargo.toml
a01_hyper_tutorial/crates/a01_hyper_hello/src/: main.rs
a01_hyper_tutorial/crates/support_tokio_io_time/: Cargo.toml
a01_hyper_tutorial/crates/support_tokio_io_time/src/: lib.rs
a01_hyper_tutorial/crates/support_tokio_io_time/src/support/: mod.rs
new-web-scraper/: Cargo.toml
new-web-scraper/src/: main.rs  news_scraper.rs
wasix-axum/: Cargo.toml  README.md
wasix-axum/src/: main.rs
wasix-grpc/: Cargo.toml  README.md  justfile
wasix-htmx/: .gitignore  Cargo.toml  README.md
wasix-htmx/assets/: main.css
wasix-htmx/src/: main.rs
wasix-threading/: Cargo.toml  README.md
wasix-tokio/: Cargo.toml  README.md
