[package]
name = "wasix-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
http-body = "1.0.1"
hyper = "1.4.1"
prost = "0.13.1"
rustls-native-certs = "0.7.2"
rustls-pemfile = "2.1.3"
tokio = { version = "1.39.3", features = ["full"] }
tokio-rustls = "0.26.0"
tonic = { version = "0.12.1", features = ["tls"] }
tower = "0.5.0"
tower-http = "0.5.2"


[build-dependencies]
tonic-build = { version = "0.12.1", features = ["prost"] }
