[package]
name = "a01_hyper_hello"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { workspace = true , features = ["full"] }
tokio = {  workspace = true , features = ["full"] }
pretty_env_logger = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true , features = ["derive"] }
serde_json = { workspace = true }
form_urlencoded = { workspace = true }
http =  { workspace = true }
futures-util = {  workspace = true , default-features = false }
support_tokio_io_time = { path = "../support_tokio_io_time" }
