[package]
name = "support_tokio_io_time"
# version.workspace = true
# edition.workspace = true

[dependencies]
bytes.workspace = true
form_urlencoded.workspace = true
# futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
pin-project-lite.workspace = true
pretty_env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true


[workspace.dependencies.bytes]
version = "1"

[workspace.dependencies.form_urlencoded]
version = "1"

[workspace.dependencies.futures-util]
default-features = false

[workspace.dependencies.http]
version = "1"

[workspace.dependencies.http-body-util]
version = "0.1"

[workspace.dependencies.hyper]
version = "1"
features = ["full"]

[workspace.dependencies.pretty_env_logger]
version = "0.5"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1"

[workspace.dependencies.tokio]
version = "1"
features = ["full"]

[workspace.dependencies.pin-project-lite]
version = "0.2.14"
